# hero_sam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo_fast_sam_algorithm.py  detect_before_segment.py  detect_before_segment_pipeline.py  fast_sam.py  inference.cpp  inference_utils.cpp  inference_utils.h  install.sh  requirements.txt  sampy.py  train_yolo.py
algorithms/: fast_sam.py
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/src/pipeline/: CMakeLists.txt  package.xml
catkin_ws/src/pipeline/src/: main.cpp  segment_inference.h
catkin_ws/src/yolo_inference/build_docker/: Yolov8OnnxRuntimeCPPInference
pipeline/: CMakeLists.txt
pipeline/inc/: ros_segment_inference.h
pipeline/src/: ros_segment_inference.cpp  segment_inference.cpp
utility/dataset_yolo/: data.yaml
yolo_inference/: Yolov8OnnxRuntimeCPPInference.cbp
yolo_inference/build_docker/: CMakeCache.txt  Makefile  cmake_install.cmake
