<?xml version="1.0"?>
<package format="2">
  <name>pipeline</name>
  <version>0.0.1</version>
  <description>YOLO + SAM pipeline node</description>

  <maintainer email="utku.tahan.ee@gmail.com">Utku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Optional: OpenCV system dependency -->
  <exec_depend>opencv</exec_depend>

  <export>
  </export>
</package>

